PORT-71: Starting to test with the example federae. Getting seemingling random crashes at various points. When it crashes, it consistently crashes at the same point until due to some magical circumstance, a recompile causes it to crash somewhere else. I've had it get down to updating attribute values and then on a recompile start crashing right after it registers the objects (a place that previously passed happily). Running it in GDB isn't helping because it is crashing at a different place in there (but the same place over and over, regardless of what is happening when not running it in GDB). Going to do a bit of a safety commit and shuffle over to Windows to tackle just getting it to compile there before I address this further. Too tired.